--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -7,3 +7,18 @@
     display: none;
 }
 
+header {
+    margin: 10px;
+}
+
+header h1 {
+    font-size: 32px;
+}
+
+section {
+    margin-top: 110px;
+}
+
+nav {
+    top: 120px;
+}
