--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -8,21 +8,18 @@
 }
 
 header {
-    padding: 10px;
+    padding: 15px;
+    min-height: 0px;
 }
 
 header h1 {
-    font-size: 32px;
-}
-
-header p {
-    display: none;
+    font-size: 24px;
 }
 
 section {
-    margin-top: 110px;
+    margin-top: 90px;
 }
 
 nav {
-    top: 120px;
+    top: 100px;
 }
